[package]
name = "mte-measurement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mte-measurement"
path = "src/main.rs"

[dependencies]
libc = "0.2.153"
rand = "0.9.0-alpha.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
