[package]
name = "mte-measurement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mte-none"
path = "src/mte-none.rs"

[[bin]]
name = "mte-sync"
path = "src/mte-sync.rs"

[[bin]]
name = "mte-async"
path = "src/mte-async.rs"

[[bin]]
name = "migrate"
path = "src/migrate.rs"

[[bin]]
name = "stg"
path = "src/stg.rs"

[[bin]]
name = "mte-migrate"
path = "src/mte-migrate.rs"

[dependencies]
libc = "0.2.153"
rand = "0.9.0-alpha.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "stg"
harness = false

[[bench]]
name = "sync_async"
harness = false
